--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<!--Main Body of App-->
 
+<!--Main Body of App-->
 <body id="background" class="col s12 m6" style="background-image:url(Assets/Images/backgroundPineapple.jpeg)">
 
   <div id="home" class="navbar-fixed">
     <nav class="teal darken-1">
-
       <div class="nav-wrapper">
         <a href="" class="brand-logo">The Saavy Traveler</a>
         <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -40,7 +39,6 @@
           </li>
         </ul>
       </div>
-
     </nav>
   </div>
   <ul class="sidenav show-on-medium" id="mobile-demo">
@@ -72,13 +70,13 @@
       <li>
         <img src="Assets/Images/food-dessert-sweet-color.jpg" alt="desert">
         <div class="caption center-align">
-          <h2>Save Results on a Custom-Made Itinerary</h2>
+          <h2 class="white-text">Save Results on a Custom-Made Itinerary</h2>
         </div>
       </li>
       <li>
         <img src="Assets/Images/firefood1.jpg" alt="desert">
         <div class="caption center-align">
-          <h2>Make Changes to Your Itinerary</h2>
+          <h2 class="white-text">Make Changes to Your Itinerary</h2>
         </div>
       </li>
     </ul>
@@ -100,7 +98,7 @@
         </div>
       </div>
     </div>
-    <button id="submitBtn" class="btn-small blue-grey modal-trigger accent-2 waves-effect waves-dark card_travel"
+    <button id="submitBtn" class="btn-small blue-grey modal-trigger accent-2 waves-effect waves-light card_travel"
       href="#modal1" type="submit" name="action">Search<i class="material-icons right">restaurant</i>
     </button>
   </div>
@@ -108,6 +106,7 @@
     <div class="row">
       <div class="col s12 m5">
         <div id="reviews" class="rev">Top Reviews</div>
+        <p id="instructions">Click a restaurant to add to your itinerary.</p>
         <div class="left-align" id="yelpArea"></div>
       </div>
       <div class="col s12 m7 center-align">
